--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav a:hover{
 }
 footer{
     text-align: center;
-    background: url("bg.jpg");
+    background: url("img/bg.jpg");
 }
 .copyright{
     color: blanchedalmond;
